# ynov-b2-cpp-playground

./: .gitignore  CMakeLists.txt  README.md  SaveIO.cpp  SaveIO.h  Utils.cpp  Utils.h  main.cpp  names.csv
bean/: Monster.cpp  Monster.h  Player.cpp  Player.h
lib/: here.txt
saves/: save_test.json
